[gd_scene load_steps=4 format=3 uid="uid://cct6j651iahdk"]

[ext_resource type="Theme" uid="uid://dec7irkhj5hdn" path="res://scenes/menus/theme.tres" id="1_c03pk"]
[ext_resource type="Script" path="res://scripts/menus/save_display_button.gd" id="2_5nhkc"]

[sub_resource type="LabelSettings" id="LabelSettings_w1pjn"]
font_size = 30

[node name="SaveDisplayButtonContainer" type="MarginContainer"]
offset_right = 417.0
offset_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("2_5nhkc")

[node name="SaveDisplayButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_c03pk")
theme_override_font_sizes/font_size = 40

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Placeholder Name"
label_settings = SubResource("LabelSettings_w1pjn")

[node name="DateLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "2023-09-03 02:04"

[connection signal="pressed" from="SaveDisplayButton" to="." method="_on_button_pressed"]
